@@ -1,3 +1,4 @@
+* Append new line under the original one
 * Prevent usage of paid invoice in draft statements
 
 Version 3.0.0 - 2013-10-21
